--- a/nextjs-14/package.json
+++ b/nextjs-14/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.6.8",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "next-router":"1.3.6"
   },
   "devDependencies": {
     "@types/node": "^20",
