--- a/springboot-3/src/main/resources/application.properties
+++ b/springboot-3/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/roddb
 spring.datasource.username=roddb
 spring.datasource.password=roddb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
